--- a/public/assets/scss/soft-ui-dashboard.css
+++ b/public/assets/scss/soft-ui-dashboard.css
@@ -18,7 +18,7 @@
   --bs-white: #fff;
   --bs-gray: #6c757d;
   --bs-gray-dark: #343a40;
-  --bs-primary: #cb0c9f;
+  --bs-primary: #17c1e8;
   --bs-secondary: #8392AB;
   --bs-success: #82d616;
   --bs-info: #17c1e8;
@@ -207,12 +207,12 @@ sup {
 }
 
 a {
-  color: #cb0c9f;
+  color: #17c1e8;
   text-decoration: none;
 }
 
 a:hover {
-  color: #830866;
+  color: #1087a2;
   text-decoration: none;
 }
 
@@ -2426,15 +2426,15 @@ progress {
 }
 
 .table-primary {
-  --bs-table-bg: #f5ceec;
-  --bs-table-striped-bg: #e9c4e0;
+  --bs-table-bg: #d1f3fa;
+  --bs-table-striped-bg: #c7e7ee;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #ddb9d4;
+  --bs-table-active-bg: #bcdbe1;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #e3bfda;
+  --bs-table-hover-bg: #c1e1e7;
   --bs-table-hover-color: #000;
   color: #000;
-  border-color: #ddb9d4;
+  border-color: #bcdbe1;
 }
 
 .table-secondary {
@@ -2958,8 +2958,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input[type="checkbox"]:indeterminate {
-  background-color: #cb0c9f;
-  border-color: #cb0c9f;
+  background-color: #17c1e8;
+  border-color: #17c1e8;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 
@@ -3055,7 +3055,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #cb0c9f;
+  background-color: #17c1e8;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -3074,7 +3074,7 @@ textarea.form-control-lg {
 }
 
 .form-range::-webkit-slider-thumb:active {
-  background-color: #f891e1;
+  background-color: #b9ecf8;
 }
 
 .form-range::-webkit-slider-runnable-track {
@@ -3090,7 +3090,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #cb0c9f;
+  background-color: #17c1e8;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -3109,7 +3109,7 @@ textarea.form-control-lg {
 }
 
 .form-range::-moz-range-thumb:active {
-  background-color: #f891e1;
+  background-color: #b9ecf8;
 }
 
 .form-range::-moz-range-track {
@@ -3556,44 +3556,44 @@ fieldset:disabled .btn {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #cb0c9f;
-  border-color: #cb0c9f;
+  color: #000;
+  background-color: #17c1e8;
+  border-color: #17c1e8;
 }
 
 .btn-primary:hover {
-  color: #fff;
-  background-color: #ad0a87;
-  border-color: #a20a7f;
+  color: #000;
+  background-color: #3acaeb;
+  border-color: #2ec7ea;
 }
 
 .btn-check:focus + .btn-primary, .btn-primary:focus {
-  color: #fff;
-  background-color: #ad0a87;
-  border-color: #a20a7f;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(211, 48, 173, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(211, 48, 173, 0.5);
+  color: #000;
+  background-color: #3acaeb;
+  border-color: #2ec7ea;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(20, 164, 197, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(20, 164, 197, 0.5);
 }
 
 .btn-check:checked + .btn-primary,
 .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active,
 .show > .btn-primary.dropdown-toggle {
-  color: #fff;
-  background-color: #a20a7f;
-  border-color: #980977;
+  color: #000;
+  background-color: #45cded;
+  border-color: #2ec7ea;
 }
 
 .btn-check:checked + .btn-primary:focus,
 .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(211, 48, 173, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(211, 48, 173, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(20, 164, 197, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(20, 164, 197, 0.5);
 }
 
 .btn-primary:disabled, .btn-primary.disabled {
-  color: #fff;
-  background-color: #cb0c9f;
-  border-color: #cb0c9f;
+  color: #000;
+  background-color: #17c1e8;
+  border-color: #17c1e8;
 }
 
 .btn-secondary {
@@ -3925,36 +3925,36 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-primary {
-  color: #cb0c9f;
-  border-color: #cb0c9f;
+  color: #17c1e8;
+  border-color: #17c1e8;
 }
 
 .btn-outline-primary:hover {
-  color: #fff;
-  background-color: #cb0c9f;
-  border-color: #cb0c9f;
+  color: #000;
+  background-color: #17c1e8;
+  border-color: #17c1e8;
 }
 
 .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(203, 12, 159, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(203, 12, 159, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(23, 193, 232, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(23, 193, 232, 0.5);
 }
 
 .btn-check:checked + .btn-outline-primary,
 .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
-  color: #fff;
-  background-color: #cb0c9f;
-  border-color: #cb0c9f;
+  color: #000;
+  background-color: #17c1e8;
+  border-color: #17c1e8;
 }
 
 .btn-check:checked + .btn-outline-primary:focus,
 .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(203, 12, 159, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(203, 12, 159, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(23, 193, 232, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(23, 193, 232, 0.5);
 }
 
 .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-  color: #cb0c9f;
+  color: #17c1e8;
   background-color: transparent;
 }
 
@@ -4232,12 +4232,12 @@ fieldset:disabled .btn {
 
 .btn-link {
   font-weight: 400;
-  color: #cb0c9f;
+  color: #17c1e8;
   text-decoration: none;
 }
 
 .btn-link:hover {
-  color: #830866;
+  color: #1087a2;
   text-decoration: none;
 }
 
@@ -4764,7 +4764,7 @@ fieldset:disabled .btn {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #cb0c9f;
+  color: #17c1e8;
   -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -4777,7 +4777,7 @@ fieldset:disabled .btn {
 }
 
 .nav-link:hover, .nav-link:focus {
-  color: #830866;
+  color: #1087a2;
 }
 
 .nav-link.disabled {
@@ -5661,7 +5661,7 @@ fieldset:disabled .btn {
 .page-link {
   position: relative;
   display: block;
-  color: #cb0c9f;
+  color: #17c1e8;
   background-color: #fff;
   border: 1px solid #dee2e6;
   -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -5679,18 +5679,18 @@ fieldset:disabled .btn {
 
 .page-link:hover {
   z-index: 2;
-  color: #830866;
+  color: #1087a2;
   background-color: #e9ecef;
   border-color: #dee2e6;
 }
 
 .page-link:focus {
   z-index: 3;
-  color: #830866;
+  color: #1087a2;
   background-color: #e9ecef;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(203, 12, 159, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(203, 12, 159, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(23, 193, 232, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(23, 193, 232, 0.25);
 }
 
 .page-item:not(:first-child) .page-link {
@@ -5700,8 +5700,8 @@ fieldset:disabled .btn {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #cb0c9f;
-  border-color: #cb0c9f;
+  background-color: #17c1e8;
+  border-color: #17c1e8;
 }
 
 .page-item.disabled .page-link {
@@ -5806,13 +5806,13 @@ fieldset:disabled .btn {
 }
 
 .alert-primary {
-  color: #7a075f;
-  background-color: #f5ceec;
-  border-color: #efb6e2;
+  color: #0e748b;
+  background-color: #d1f3fa;
+  border-color: #b9ecf8;
 }
 
 .alert-primary .alert-link {
-  color: #62064c;
+  color: #0b5d6f;
 }
 
 .alert-secondary {
@@ -5933,7 +5933,7 @@ fieldset:disabled .btn {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #cb0c9f;
+  background-color: #17c1e8;
   -webkit-transition: width 0.6s ease;
   transition: width 0.6s ease;
 }
@@ -6031,8 +6031,8 @@ fieldset:disabled .btn {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #cb0c9f;
-  border-color: #cb0c9f;
+  background-color: #17c1e8;
+  border-color: #17c1e8;
 }
 
 .list-group-item + .list-group-item {
@@ -6228,19 +6228,19 @@ fieldset:disabled .btn {
 }
 
 .list-group-item-primary {
-  color: #7a075f;
-  background-color: #f5ceec;
+  color: #0e748b;
+  background-color: #d1f3fa;
 }
 
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #7a075f;
-  background-color: #ddb9d4;
+  color: #0e748b;
+  background-color: #bcdbe1;
 }
 
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #7a075f;
-  border-color: #7a075f;
+  background-color: #0e748b;
+  border-color: #0e748b;
 }
 
 .list-group-item-secondary {
@@ -6392,8 +6392,8 @@ fieldset:disabled .btn {
 
 .btn-close:focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(203, 12, 159, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(203, 12, 159, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(23, 193, 232, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(23, 193, 232, 0.25);
   opacity: 1;
 }
 
@@ -7500,11 +7500,11 @@ fieldset:disabled .btn {
 }
 
 .link-primary {
-  color: #cb0c9f;
+  color: #17c1e8;
 }
 
 .link-primary:hover, .link-primary:focus {
-  color: #a20a7f;
+  color: #45cded;
 }
 
 .link-secondary {
@@ -8110,7 +8110,7 @@ fieldset:disabled .btn {
 }
 
 .border-primary {
-  border-color: #cb0c9f !important;
+  border-color: #17c1e8 !important;
 }
 
 .border-secondary {
@@ -9942,7 +9942,7 @@ fieldset:disabled .btn {
 
 /* rtl:end:remove */
 .text-primary {
-  color: #cb0c9f !important;
+  color: #17c1e8 !important;
 }
 
 .text-secondary {
@@ -9998,7 +9998,7 @@ fieldset:disabled .btn {
 }
 
 .bg-primary {
-  background-color: #cb0c9f !important;
+  background-color: #17c1e8 !important;
 }
 
 .bg-secondary {
@@ -17249,7 +17249,7 @@ fieldset:disabled .btn {
 
 */
 .alert-primary {
-  background-image: linear-gradient(310deg, #7928CA 0%, #d6006c 100%);
+  background-image: linear-gradient(310deg, #2152ff 0%, #02c6f3 100%);
 }
 
 .alert-secondary {
@@ -17394,7 +17394,7 @@ fieldset:disabled .btn {
 }
 
 .badge.bg-primary {
-  background: #cb0c9f;
+  background: #17c1e8;
 }
 
 .badge.bg-secondary {
@@ -17543,13 +17543,13 @@ fieldset:disabled .btn {
 
 .btn-primary:hover,
 .btn.bg-gradient-primary:hover {
-  background-color: #cb0c9f;
-  border-color: #cb0c9f;
+  background-color: #17c1e8;
+  border-color: #17c1e8;
 }
 
 .btn-primary .btn.bg-outline-primary,
 .btn.bg-gradient-primary .btn.bg-outline-primary {
-  border: 1px solid #cb0c9f;
+  border: 1px solid #17c1e8;
 }
 
 .btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active,
@@ -17558,8 +17558,8 @@ fieldset:disabled .btn {
 .btn.bg-gradient-primary:not(:disabled):not(.disabled):active,
 .show >
 .btn.bg-gradient-primary.dropdown-toggle {
-  color: color-yiq(#cb0c9f);
-  background-color: #cb0c9f;
+  color: color-yiq(#17c1e8);
+  background-color: #17c1e8;
 }
 
 .btn-primary.focus, .btn-primary:focus,
@@ -17578,7 +17578,7 @@ fieldset:disabled .btn {
   opacity: .75;
   -webkit-box-shadow: none;
           box-shadow: none;
-  color: #cb0c9f;
+  color: #17c1e8;
 }
 
 .btn-secondary:hover,
@@ -18117,7 +18117,7 @@ fieldset:disabled .btn {
 }
 
 .card.card-background.card-background-mask-primary:after {
-  background-image: linear-gradient(310deg, #7928CA 0%, #FF0080 100%);
+  background-image: linear-gradient(310deg, #2152ff 0%, #21d4fd 100%);
   opacity: .85;
 }
 
@@ -18557,8 +18557,8 @@ fieldset:disabled .btn {
 .fixed-plugin .btn.bg-gradient-primary:not(:disabled):not(.disabled):not(.active) {
   background-color: transparent;
   background-image: none;
-  border: 1px solid #cb0c9f;
-  color: #cb0c9f;
+  border: 1px solid #17c1e8;
+  color: #17c1e8;
 }
 
 .fixed-plugin.show .card {
@@ -18762,7 +18762,7 @@ label,
 }
 
 .bg-gradient-primary {
-  background-image: linear-gradient(310deg, #7928CA 0%, #FF0080 100%);
+  background-image: linear-gradient(310deg, #2152ff 0%, #21d4fd 100%);
 }
 
 .bg-gradient-secondary {
@@ -18794,7 +18794,7 @@ label,
 }
 
 .bg-gradient-faded-primary {
-  background-image: radial-gradient(370px circle at 80% 50%, rgba(203, 12, 159, 0.6) 0, #9b0979 100%);
+  background-image: radial-gradient(370px circle at 80% 50%, rgba(23, 193, 232, 0.6) 0, #129aba 100%);
 }
 
 .bg-gradient-faded-secondary {
@@ -18830,7 +18830,7 @@ label,
 }
 
 .bg-gradient-faded-primary-vertical {
-  background-image: radial-gradient(200px circle at 50% 70%, rgba(203, 12, 159, 0.3) 0, #cb0c9f 100%);
+  background-image: radial-gradient(200px circle at 50% 70%, rgba(23, 193, 232, 0.3) 0, #17c1e8 100%);
 }
 
 .bg-gradient-faded-secondary-vertical {
@@ -18988,11 +18988,11 @@ label,
 }
 
 svg.text-primary .color-foreground {
-  fill: #7928CA;
+  fill: #2152ff;
 }
 
 svg.text-primary .color-background {
-  fill: #FF0080;
+  fill: #21d4fd;
 }
 
 svg.text-secondary .color-foreground {
@@ -19090,7 +19090,7 @@ svg.text-dark .color-background {
 }
 
 .blur-section.blur-gradient-primary {
-  background-image: linear-gradient(310deg, rgba(121, 40, 202, 0.95) 0%, rgba(255, 0, 128, 0.95) 100%);
+  background-image: linear-gradient(310deg, rgba(33, 82, 255, 0.95) 0%, rgba(33, 212, 253, 0.95) 100%);
 }
 
 *.move-on-hover {
@@ -19113,7 +19113,7 @@ svg.text-dark .color-background {
 }
 
 *.gradient-animation {
-  background: linear-gradient(-45deg, #2152ff, #ea0606, #fbcf33, #7928CA, #344767);
+  background: linear-gradient(-45deg, #2152ff, #ea0606, #fbcf33, #2152ff, #344767);
   background-size: 400% 400% !important;
   -webkit-animation: gradient 10s ease infinite;
           animation: gradient 10s ease infinite;
@@ -19695,8 +19695,8 @@ hr.horizontal.gray-light {
 
 .navbar-vertical.navbar-expand-xs .lavalamp-object {
   width: calc(100% - 1rem) !important;
-  background: theme-color("primary");
-  color: color-yiq(#cb0c9f);
+  background: theme-color("info");
+  color: color-yiq(#17c1e8);
   margin-right: 0.5rem;
   margin-left: 0.5rem;
   padding-left: 1rem;
@@ -19789,8 +19789,8 @@ hr.horizontal.gray-light {
   }
   .navbar-vertical.navbar-expand-sm .lavalamp-object {
     width: calc(100% - 1rem) !important;
-    background: theme-color("primary");
-    color: color-yiq(#cb0c9f);
+    background: theme-color("info");
+    color: color-yiq(#17c1e8);
     margin-right: 0.5rem;
     margin-left: 0.5rem;
     padding-left: 1rem;
@@ -19882,8 +19882,8 @@ hr.horizontal.gray-light {
   }
   .navbar-vertical.navbar-expand-md .lavalamp-object {
     width: calc(100% - 1rem) !important;
-    background: theme-color("primary");
-    color: color-yiq(#cb0c9f);
+    background: theme-color("info");
+    color: color-yiq(#17c1e8);
     margin-right: 0.5rem;
     margin-left: 0.5rem;
     padding-left: 1rem;
@@ -19975,8 +19975,8 @@ hr.horizontal.gray-light {
   }
   .navbar-vertical.navbar-expand-lg .lavalamp-object {
     width: calc(100% - 1rem) !important;
-    background: theme-color("primary");
-    color: color-yiq(#cb0c9f);
+    background: theme-color("info");
+    color: color-yiq(#17c1e8);
     margin-right: 0.5rem;
     margin-left: 0.5rem;
     padding-left: 1rem;
@@ -20068,8 +20068,8 @@ hr.horizontal.gray-light {
   }
   .navbar-vertical.navbar-expand-xl .lavalamp-object {
     width: calc(100% - 1rem) !important;
-    background: theme-color("primary");
-    color: color-yiq(#cb0c9f);
+    background: theme-color("info");
+    color: color-yiq(#17c1e8);
     margin-right: 0.5rem;
     margin-left: 0.5rem;
     padding-left: 1rem;
@@ -20161,8 +20161,8 @@ hr.horizontal.gray-light {
   }
   .navbar-vertical.navbar-expand-xxl .lavalamp-object {
     width: calc(100% - 1rem) !important;
-    background: theme-color("primary");
-    color: color-yiq(#cb0c9f);
+    background: theme-color("info");
+    color: color-yiq(#17c1e8);
     margin-right: 0.5rem;
     margin-left: 0.5rem;
     padding-left: 1rem;
@@ -20181,7 +20181,7 @@ hr.horizontal.gray-light {
 }
 
 .sidenav[data-color="primary"] .navbar-nav > .nav-item > .nav-link.active .icon {
-  background-image: linear-gradient(310deg, #cb0c9f 0%, #cb0c9f 100%);
+  background-image: linear-gradient(310deg, #17c1e8 0%, #17c1e8 100%);
 }
 
 .sidenav[data-color="secondary"] .navbar-nav > .nav-item > .nav-link.active .icon {
@@ -20331,7 +20331,7 @@ hr.horizontal.gray-light {
 }
 
 .navbar-vertical .navbar-nav > .nav-item .nav-link.active .icon {
-  background-image: linear-gradient(310deg, #cb0c9f 0%, #cb0c9f 100%);
+  background-image: linear-gradient(310deg, #17c1e8 0%, #17c1e8 100%);
 }
 
 .navbar-vertical .navbar-nav > .nav-item .nav-link.active .icon svg .color-background,
@@ -20652,8 +20652,8 @@ hr.horizontal.gray-light {
 }
 
 .nav.nav-pills.nav-pills-primary .moving-tab .nav-link.active {
-  background: #7928CA;
-  color: #7928CA;
+  background: #2152ff;
+  color: #2152ff;
 }
 
 .nav.nav-pills.nav-pills-info {
@@ -20781,7 +20781,7 @@ hr.horizontal.gray-light {
 }
 
 .pagination.pagination-primary .page-item.active > .page-link, .pagination.pagination-primary .page-item.active > .page-link:focus, .pagination.pagination-primary .page-item.active > .page-link:hover {
-  background-image: linear-gradient(310deg, #7928CA 0%, #FF0080 100%);
+  background-image: linear-gradient(310deg, #2152ff 0%, #21d4fd 100%);
   border: none;
 }
 
@@ -22820,7 +22820,7 @@ span.flatpickr-weekday {
 }
 
 .flatpickr-calendar .flatpickr-day.today, .flatpickr-calendar .flatpickr-day.selected, .flatpickr-calendar .flatpickr-day.startRange, .flatpickr-calendar .flatpickr-day.endRange {
-  background: #cb0c9f !important;
+  background: #17c1e8 !important;
   color: #fff;
   border: none;
 }
@@ -22851,8 +22851,8 @@ span.flatpickr-weekday {
 .flatpickr-day.endRange.startRange + .endRange:not(:nth-child(7n+1)),
 .flatpickr-day.selected.startRange + .endRange:not(:nth-child(7n+1)),
 .flatpickr-day.startRange.startRange + .endRange:not(:nth-child(7n+1)) {
-  -webkit-box-shadow: -10px 0 0 #cb0c9f;
-          box-shadow: -10px 0 0 #cb0c9f;
+  -webkit-box-shadow: -10px 0 0 #17c1e8;
+          box-shadow: -10px 0 0 #17c1e8;
 }
 
 /*! nouislider - 14.6.3 - 11/19/2020 */
