--- a/public/assets/scss/soft-ui-dashboard/_navbar-vertical-extend.scss
+++ b/public/assets/scss/soft-ui-dashboard/_navbar-vertical-extend.scss
@@ -136,8 +136,8 @@
 
           .lavalamp-object {
             width: calc(100% - 1rem) !important;
-            background: theme-color("primary");
-            color: color-yiq($primary);
+            background: theme-color("info");
+            color: color-yiq($info);
             margin-right: 0.5rem;
             margin-left: 0.5rem;
             padding-left: 1rem;
