--- a/public/assets/scss/soft-ui-dashboard/_nav.scss
+++ b/public/assets/scss/soft-ui-dashboard/_nav.scss
@@ -33,8 +33,8 @@
       }
       .moving-tab {
         .nav-link.active {
-          background: $primary-gradient;
-          color: $primary-gradient;
+          background: $info-gradient;
+          color: $info-gradient;
         }
       }
     }
