--- a/public/assets/scss/soft-ui-dashboard/_variables.scss
+++ b/public/assets/scss/soft-ui-dashboard/_variables.scss
@@ -76,13 +76,13 @@ $theme-colors: (
 
 
 // Gradient colors
-$primary-gradient:            #2152ff !default;
+$primary-gradient:            #17C1E8 !default;
 $primary-gradient-state:      #21d4fd !default;
 
 $secondary-gradient:          #627594 !default;
 $secondary-gradient-state:    #A8B8D8 !default;
 
-$info-gradient:               #2152ff !default;
+$info-gradient:               #17C1E8 !default;
 $info-gradient-state:         #21d4fd !default;
 
 $success-gradient:            #17ad37 !default;
@@ -548,7 +548,7 @@ $text-gradient-text-fill:     transparent !default;
 $text-gradient-position:      relative !default;
 $text-gradient-zindex:        1 !default;
 $text-gradient-bg-primary:    linear-gradient(310deg, #7928CA, #FF0080) !default;
-$text-gradient-bg-info:       linear-gradient(310deg, #2152FF, #21D4FD) !default;
+$text-gradient-bg-info:       linear-gradient(310deg, #17C1E8, #21D4FD) !default;
 $text-gradient-bg-success:    linear-gradient(310deg, #17AD37, #C1E823) !default;
 $text-gradient-bg-warning:    linear-gradient(310deg, #F53939, #FBCF33) !default;
 $text-gradient-bg-danger:     linear-gradient(310deg, #D60808, #FF6690) !default;
