--- a/public/assets/scss/soft-ui-dashboard/plugins/pro/_sweetalert2-extend.scss
+++ b/public/assets/scss/soft-ui-dashboard/plugins/pro/_sweetalert2-extend.scss
@@ -3,13 +3,13 @@
 }
 
 .swal2-styled.swal2-confirm {
-  background-image: linear-gradient(310deg,#2152ff,#21d4fd);
+  background-image: linear-gradient(310deg,#17C1E8,#21d4fd);
   background-color: transparent;
   @include button-size($btn-padding-y, $btn-padding-x, $btn-font-size, $btn-border-radius);
 
   &:hover,
   &:focus {
-    background-image: linear-gradient(310deg,#2152ff,#21d4fd) !important;
+    background-image: linear-gradient(310deg,#17C1E8,#21d4fd) !important;
     outline: 0;
     box-shadow: $btn-focus-box-shadow;
   }
