--- a/public/assets/scss/soft-ui-dashboard/_variables.scss
+++ b/public/assets/scss/soft-ui-dashboard/_variables.scss
@@ -548,7 +548,7 @@ $text-gradient-text-fill:     transparent !default;
 $text-gradient-position:      relative !default;
 $text-gradient-zindex:        1 !default;
 $text-gradient-bg-primary:    linear-gradient(310deg, #7928CA, #FF0080) !default;
-$text-gradient-bg-info:       linear-gradient(310deg, #17C1E8, #21D4FD) !default;
+$text-gradient-bg-info:       linear-gradient(310deg, #17C1E8, #2152ff) !default;
 $text-gradient-bg-success:    linear-gradient(310deg, #17AD37, #C1E823) !default;
 $text-gradient-bg-warning:    linear-gradient(310deg, #F53939, #FBCF33) !default;
 $text-gradient-bg-danger:     linear-gradient(310deg, #D60808, #FF6690) !default;
