--- a/public/assets/docs-soft.css
+++ b/public/assets/docs-soft.css
@@ -269,7 +269,7 @@
   color: #fff;
   text-transform: uppercase;
   will-change: transform;
-  background-image: linear-gradient(310deg,#03a9f4,#03a9f4);
+  background-image: linear-gradient(310deg,#03a9f4,#2152ff);
   box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08);
   font-weight: 700;
   line-height: 1.5;
@@ -808,7 +808,7 @@
   padding-top: 8px !important;
   display: inline !important;
   border-radius: 6px !important;
-  background-image: linear-gradient(310deg,#03a9f4,#03a9f4) !important;
+  background-image: linear-gradient(310deg,#03a9f4,#2152ff) !important;
 }
 
 @media (max-width: 1200px) {
@@ -1105,7 +1105,7 @@ code[class*=language-], pre[class*=language-] {
 }
 
 .ct-docs-info-icon-primary {
-  background: linear-gradient(87deg, #03a9f4 0, #0288c6 100%) !important;
+  background: linear-gradient(87deg, #03a9f4 0, #2152ff 100%) !important;
 }
 
 .ct-docs-info-icon-danger {
